# generic-smtp-listener

./: .gitignore  Cargo.toml  README.md
src/: main.rs
