[package]
name = "smtp-receiver"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
quoted_printable = "0.5"
sha1 = "0.10"
tokio = { version = "1.37", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[dev-dependencies]
tempfile = "3.10"
